--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    
-
+     <button id="go">Gioca ora a campominato</button>
+<div class="container">
+   
+<div class="casella"></div>
+</div>
 
     <script src="./assets/js/main.js"></script>
 </body>
